--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MeteoSrv",
+  "name": "meteo-srv",
   "version": "1.0.0",
   "main": "src/server.ts",
   "repository": "git@github.com:lordniken/MeteoSrv.git",
@@ -8,16 +8,26 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon src/server.ts",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "lint": "eslint src/**"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
