--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "tsc",
     "dev": "nodemon src/server.ts",
     "start": "node build/server.js",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**",
+    "typeorm": "ts-node --transpile-only ./node_modules/typeorm/cli.js",
+    "typeorm:generate-migration": "yarn typeorm migration:generate",
+    "typeorm:create-migration": "yarn typeorm migration:create -d src/migrations",
+    "typeorm:run-migration": "yarn typeorm migration:run",
+    "typeorm:revert-migration": "yarn typeorm migration:revert"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -30,6 +35,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "net": "^1.0.2"
+    "net": "^1.0.2",
+    "pg": "^8.7.1",
+    "typeorm": "^0.2.40"
   }
 }
