--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
+    "@types/node-cron": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
@@ -36,6 +37,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "net": "^1.0.2",
+    "node-cron": "^3.0.0",
     "pg": "^8.7.1",
     "typeorm": "^0.2.40"
   }
