--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
   br_srv:
@@ -9,6 +9,8 @@ services:
       - '9800:9800'
     links:
       - br_postgres
+    networks:
+      - br_network
   br_postgres:
     container_name: br_pg
     build: db/
@@ -21,3 +23,10 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_USER: postgres
       POSTGRES_DB: brHome
+    networks:
+      - br_network
+
+networks:
+  br_network:
+    external:
+      name: br_network
