--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "net": "^1.0.2",
