--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "date-fns": "^2.25.0",
+    "date-fns-tz": "^1.1.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "net": "^1.0.2",
