Telegram notification service

--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "net": "^1.0.2",
     "node-cron": "^3.0.0",
     "pg": "^8.7.1",
+    "telegraf": "^4.6.0",
     "typeorm": "^0.2.40"
   }
 }
