--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,14 @@ jobs:
           echo DB_USER=${{ secrets.DB_USER }} >> server/.env
           echo DB_PWD= >> server/.env
           echo DB_NAME=${{ secrets.DB_NAME }} >> server/.env
+          echo TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} >> server/.env
+          echo TELEGRAM_CHANEL_ID=${{ secrets.TELEGRAM_CHANEL_ID }} >> server/.env
+          echo EMAIL_HOST=${{ secrets.EMAIL_HOST }} >> server/.env
+          echo EMAIL_PORT=${{ secrets.EMAIL_PORT }} >> server/.env
+          echo EMAIL_LOGIN=${{ secrets.EMAIL_LOGIN }} >> server/.env
+          echo EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} >> server/.env
+          echo EMAIL_FROM=${{ secrets.EMAIL_FROM }} >> server/.env
+          echo EMAIL_TO=${{ secrets.EMAIL_TO }} >> server/.env
           cat server/.env
       - name: Building
         run: |
